[BTWCT-2052] prevent flicker of object under addToCart modal - switch modal overlay on tablet & above to flex to center modal

--- a/waters-aem-frontend/src/styles/anchor.scss
+++ b/waters-aem-frontend/src/styles/anchor.scss
@@ -322,3 +322,10 @@
         overflow-x: auto;
     }
 }
+
+html.modalOpen .cmp-anchor{
+    @include tablet-and-over {
+        position: relative;
+        z-index: -1;
+    }
+}
